Fix: Update .htaccess for Bluehost deployment

--- a/.htaccess
+++ b/.htaccess
@@ -1,18 +1,7 @@
-# Enable URL rewriting
 RewriteEngine On
+RewriteBase /
 
-# Prevent redirect loops for assets/js directory
-RewriteCond %{REQUEST_URI} ^/assets/js/
-RewriteRule ^ - [L]
-
-# Redirect all other requests to index.php or appropriate front controller
-# (Adjust as per your routing needs)
-# RewriteCond %{REQUEST_FILENAME} !-f
-# RewriteCond %{REQUEST_FILENAME} !-d
-# RewriteRule . /index.php [L]
-
-# Prevent access to PHP files in assets directory
-<FilesMatch "^assets/.*\.php$">
-    Order Deny,Allow
-    Deny from all
-</FilesMatch>
+# Route requests to the public directory
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteRule ^(.*)$ public/$1 [L]
